[package]
name = "gpu_vk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37", default-features = false, features = ["linked", "debug"] }
ash-window = "0.12"
winit = "0.28"
image = { version = "0.24", default-features = false, features = ["png"] }
raw-window-handle = "0.5"
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs", version = "0.3" }